# adventOfCode

./: .gitignore  Cargo.toml  intcode.py  template.cpp  template.py
2019/: intcode.py
2019/day10/: day10.py  day10_pt2.py
2019/day13/: day13.py  day13_pt2.py
2019/day14/: day14.py
2019/day15/: day15_pt2.py
2019/day17/: day17.py
2019/day18/: day18_pt2.py
2019/day19/: day19.py
2019/day24/: day24_pt2.py
2019/day25/: day25.py  map
2019/day3/: day3.py
2019/day5/: day5.py
2019/day7/: day7.py  day7_pt2.py
2019/day9/: day9.py
2020/: Cargo.toml
2021/1/: run.py
2021/cpp/: CMakeLists.txt  day1.cpp  day11.cpp  day13.cpp  day15.cpp  day17.cpp  day19.cpp  day21.cpp  day23.cpp  day25.cpp  day3.cpp  day5.cpp  day7.cpp  day9.cpp
2021/python/: day10.py  day12.py  day14.py  day16.py  day18.py  day2.py  day20.py  day22.py  day24.py  day4.py  day6.py  day8.py
2022/: .gitignore
2022/1/: run.py
2022/2/: run.py
2022/3/: run.py
2022/4/: run.py
2022/cpp/: .clang-format  CMakeLists.txt  Makefile  day1.cpp  day17.cpp
2022/python/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  (+18 more)
2023/: Cargo.toml
2024/: day1.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
day1/: day1.py
day11/: day11.py
day12/: day12.py  day12_pt2.py
day14/: day14.py
day15/: day15.py
day16/: day16.py  day16_pt2.py
day18/: day18.py  input_pt2
day2/: day2.py
day20/: day20.py
day21/: day21.py
day22/: day22.py
day23/: day23.py
day24/: day24.py
day4/: day4.py
day6/: day6.py
day8/: day8.py
(+2 files in other folders)
